--- a/public/css/app.css
+++ b/public/css/app.css
@@ -551,23 +551,23 @@ select{
   bottom: 0px;
   left: 0px;
 }
-.top-0{
-  top: 0px;
+.left-0{
+  left: 0px;
 }
 .right-0{
   right: 0px;
 }
-.left-0{
-  left: 0px;
+.top-0{
+  top: 0px;
 }
 .z-0{
   z-index: 0;
 }
-.z-50{
-  z-index: 50;
-}
 .z-10{
   z-index: 10;
+}
+.z-50{
+  z-index: 50;
 }
 .mx-auto{
   margin-left: auto;
@@ -579,8 +579,11 @@ select{
 .-ml-px{
   margin-left: -1px;
 }
-.mb-4{
-  margin-bottom: 1rem;
+.ml-6{
+  margin-left: 1.5rem;
+}
+.ml-4{
+  margin-left: 1rem;
 }
 .ml-1{
   margin-left: 0.25rem;
@@ -591,6 +594,9 @@ select{
 .mt-3{
   margin-top: 0.75rem;
 }
+.mb-4{
+  margin-bottom: 1rem;
+}
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -599,9 +605,6 @@ select{
 }
 .mt-4{
   margin-top: 1rem;
-}
-.ml-4{
-  margin-left: 1rem;
 }
 .ml-2{
   margin-left: 0.5rem;
@@ -618,21 +621,6 @@ select{
 .mt-2{
   margin-top: 0.5rem;
 }
-.mr-2{
-  margin-right: 0.5rem;
-}
-.mt-8{
-  margin-top: 2rem;
-}
-.ml-12{
-  margin-left: 3rem;
-}
-.-mt-px{
-  margin-top: -1px;
-}
-.ml-6{
-  margin-left: 1.5rem;
-}
 .block{
   display: block;
 }
@@ -648,38 +636,32 @@ select{
 .table{
   display: table;
 }
-.grid{
-  display: grid;
-}
 .hidden{
   display: none;
 }
 .h-5{
   height: 1.25rem;
 }
-.h-16{
-  height: 4rem;
+.h-40{
+  height: 10rem;
 }
 .h-10{
   height: 2.5rem;
 }
-.h-4{
-  height: 1rem;
-}
 .h-6{
   height: 1.5rem;
 }
-.h-20{
-  height: 5rem;
-}
-.h-8{
-  height: 2rem;
-}
-.h-40{
-  height: 10rem;
-}
 .h-12{
   height: 3rem;
+}
+.h-16{
+  height: 4rem;
+}
+.h-4{
+  height: 1rem;
+}
+.h-20{
+  height: 5rem;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -687,11 +669,20 @@ select{
 .w-5{
   width: 1.25rem;
 }
-.w-8\/12{
-  width: 66.666667%;
-}
 .w-full{
   width: 100%;
+}
+.w-10{
+  width: 2.5rem;
+}
+.w-6{
+  width: 1.5rem;
+}
+.w-12{
+  width: 3rem;
+}
+.w-0{
+  width: 0px;
 }
 .w-auto{
   width: auto;
@@ -699,8 +690,8 @@ select{
 .w-4{
   width: 1rem;
 }
-.w-6{
-  width: 1.5rem;
+.w-8\/12{
+  width: 66.666667%;
 }
 .w-3\/12{
   width: 25%;
@@ -711,37 +702,19 @@ select{
 .w-5\/12{
   width: 41.666667%;
 }
-.w-8{
-  width: 2rem;
-}
 .w-48{
   width: 12rem;
-}
-.w-10{
-  width: 2.5rem;
-}
-.w-12{
-  width: 3rem;
-}
-.w-0{
-  width: 0px;
 }
 .min-w-max{
   min-width: -webkit-max-content;
   min-width: -moz-max-content;
   min-width: max-content;
 }
-.max-w-7xl{
-  max-width: 80rem;
-}
-.max-w-xl{
-  max-width: 36rem;
-}
-.max-w-6xl{
-  max-width: 72rem;
-}
 .max-w-sm{
   max-width: 24rem;
+}
+.max-w-7xl{
+  max-width: 80rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -794,9 +767,6 @@ select{
 .list-disc{
   list-style-type: disc;
 }
-.grid-cols-1{
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
 .flex-col{
   flex-direction: column;
 }
@@ -818,6 +788,11 @@ select{
 .justify-between{
   justify-content: space-between;
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -828,28 +803,20 @@ select{
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
-.space-y-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
 .overflow-hidden{
   overflow: hidden;
 }
-.break-all{
-  word-break: break-all;
-}
 .rounded-md{
   border-radius: 0.375rem;
-}
-.rounded{
-  border-radius: 0.25rem;
 }
 .rounded-lg{
   border-radius: 0.5rem;
 }
 .rounded-full{
   border-radius: 9999px;
+}
+.rounded{
+  border-radius: 0.25rem;
 }
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
@@ -874,14 +841,11 @@ select{
 .border-l-4{
   border-left-width: 4px;
 }
-.border-r{
-  border-right-width: 1px;
+.border-t-4{
+  border-top-width: 4px;
 }
 .border-b-2{
   border-bottom-width: 2px;
-}
-.border-t-4{
-  border-top-width: 4px;
 }
 .border-gray-300{
   --tw-border-opacity: 1;
@@ -902,10 +866,6 @@ select{
 .border-transparent{
   border-color: transparent;
 }
-.border-gray-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
 .border-green-600{
   --tw-border-opacity: 1;
   border-color: rgb(22 163 74 / var(--tw-border-opacity));
@@ -913,6 +873,10 @@ select{
 .border-red-600{
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+.border-orange-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(249 115 22 / var(--tw-border-opacity));
 }
 .border-yellow-400{
   --tw-border-opacity: 1;
@@ -926,6 +890,14 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -934,21 +906,13 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
-.bg-green-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-green-500{
+.bg-green-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 .bg-yellow-400{
   --tw-bg-opacity: 1;
@@ -996,14 +960,14 @@ select{
 .fill-current{
   fill: currentColor;
 }
+.p-4{
+  padding: 1rem;
+}
 .p-2{
   padding: 0.5rem;
 }
 .p-6{
   padding: 1.5rem;
-}
-.p-4{
-  padding: 1rem;
 }
 .px-4{
   padding-left: 1rem;
@@ -1016,6 +980,10 @@ select{
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .px-6{
   padding-left: 1.5rem;
@@ -1032,10 +1000,6 @@ select{
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 .py-12{
   padding-top: 3rem;
@@ -1065,9 +1029,6 @@ select{
 .pr-4{
   padding-right: 1rem;
 }
-.pt-8{
-  padding-top: 2rem;
-}
 .pt-1{
   padding-top: 0.25rem;
 }
@@ -1088,21 +1049,17 @@ select{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 .font-medium{
   font-weight: 500;
@@ -1122,17 +1079,11 @@ select{
 .leading-5{
   line-height: 1.25rem;
 }
-.leading-tight{
-  line-height: 1.25;
-}
-.leading-7{
-  line-height: 1.75rem;
-}
 .leading-6{
   line-height: 1.5rem;
 }
-.tracking-wider{
-  letter-spacing: 0.05em;
+.leading-tight{
+  line-height: 1.25;
 }
 .tracking-widest{
   letter-spacing: 0.1em;
@@ -1145,17 +1096,29 @@ select{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-gray-800{
+.text-green-600{
   --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
-.text-gray-400{
+.text-gray-800{
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .text-green-500{
   --tw-text-opacity: 1;
@@ -1169,9 +1132,9 @@ select{
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
-.text-green-600{
+.text-orange-500{
   --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 .text-indigo-600{
   --tw-text-opacity: 1;
@@ -1181,25 +1144,9 @@ select{
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
 }
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-red-600{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 .text-blue-600{
   --tw-text-opacity: 1;
@@ -1227,6 +1174,11 @@ select{
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1235,11 +1187,6 @@ select{
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1{
@@ -1268,17 +1215,17 @@ select{
 .duration-150{
   transition-duration: 150ms;
 }
-.duration-200{
-  transition-duration: 200ms;
-}
-.duration-75{
-  transition-duration: 75ms;
-}
 .duration-300{
   transition-duration: 300ms;
 }
 .duration-100{
   transition-duration: 100ms;
+}
+.duration-200{
+  transition-duration: 200ms;
+}
+.duration-75{
+  transition-duration: 75ms;
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1535,6 +1482,11 @@ body {
     border-color: #b5b52a;
     color: #b5b52a;
 }
+.gr-employe-list-wrap span.gr-employee-point.orange {
+    background-color: #dcdc651c;
+    border-color: orange;
+    color: orange;
+}
 .update-form .edit-point {
     border: 1px solid #ccccccd6!important;
     text-align: center;
@@ -1641,13 +1593,13 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
-.focus\:text-gray-700:focus{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
 .focus\:text-gray-500:focus{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.focus\:text-gray-700:focus{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .focus\:text-indigo-800:focus{
   --tw-text-opacity: 1;
@@ -1750,9 +1702,6 @@ body {
   }
   .sm\:items-center{
     align-items: center;
-  }
-  .sm\:justify-start{
-    justify-content: flex-start;
   }
   .sm\:justify-end{
     justify-content: flex-end;
